--- a/view/admin-form.html
+++ b/view/admin-form.html
@@ -7,24 +7,22 @@
     <title>Registration form-Admin</title>
 </head>
 <body>
-    <form action="regform-validate.php" style="display: inline-block;" method="POST">
+    <form action="../controller/addAdmin.controller.php" style="display: inline-block;" method="POST">
         <fieldset>
-            <legend>Admin Registration Form</legend>
-            <label for="fname">First Name:</label>
-            <input type="text" name="fname" id="fname"><br><br>
-            <label for="lname">Last Name:</label>
-            <input type="text" name="lname" id="lname"><br><br>
-            <label for="age">Age :</label>
-            <input type="text" name="age" id="age"><br><br>
-            <label for="address">Present Address:</label>
-            <input type="text" name="address" id="address"><br><br>
-            <label for="contact">Phone:</label>
-            <input type="number" name="contact" id="contact"><br><br>
-            <label for="password">Enter Password</label>
-            <label for="msg">(upper/local case mix with num)</label><br>
+            <legend>Add New Admin</legend>
+            <label for="firstName">First Name:</label>
+            <input type="text" name="firstName" id="firstName"><br><br>
+            <label for="lastName">Last Name:</label>
+            <input type="text" name="lastName" id="lastName"><br><br>
+            <label for="username">Username :</label>
+            <input type="text" name="username" id="username"><br><br>
+            <label for="email">Email             :</label>
+            <input type="text" name="email" id="email"><br><br>
+            <label for="password">Password: </label>
+            <!-- <label for="password">(upper/local case mix with num)</label><br> -->
             <input type="password" name="password" id="password"><br>
         </fieldset><br>
-        <input type="submit" value="Confirm" name="admin">
+        <input type="submit" value="Confirm">
     </form>
 </body>
 </html>
