--- a/view/navbar.componrnt.html
+++ b/view/navbar.componrnt.html
@@ -1,2 +1,2 @@
-1. <a href="home.php">Doctors Statistics</a>2.<a href="conversion-rate.php">Transaction History </a>3.<a href="history.php"> Feedbacks</a> 
+1. <a href="home.php">Doctors Statistics</a>2.<a href="../view/doctorstats.view.php">Transaction History </a>3.<a href="feedback.view.php"> Feedbacks</a> 
 <a href="../view/manageUsers.view.php">4. Manage user/s</a> 5. <a href="logout.php">Logout</a>
