--- a/view/login-form.html
+++ b/view/login-form.html
@@ -26,6 +26,8 @@
       </fieldset> 
       <br>
       <input type="submit" value="Login"><br>
+        <br>
+      <a href="">forgot password?</a>
 
     </form>
      
