forget password done

--- a/view/login-form.html
+++ b/view/login-form.html
@@ -27,7 +27,7 @@
       <br>
       <input type="submit" value="Login"><br>
         <br>
-      <a href="">forgot password?</a>
+      <a href="forget-password.html">forgot password?</a>
 
     </form>
      
