--- a/view/login-form.html
+++ b/view/login-form.html
@@ -12,7 +12,7 @@
     <fieldset>
         <legend>Login:</legend>
 
-        <label for="email">Email:</label><br>
+        <label for="email">Username:</label><br>
         <input type="text" id="username" name="username" >
        
             </input><br>
