--- a/view/css/input.css
+++ b/view/css/input.css
@@ -29,3 +29,16 @@ input[type=text],input[type=password], select {
     padding: 20px;
   }
   
+
+  .search {
+    width: 90%;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    background-color: white;
+    background-image: url('https://www.w3schools.com/css/searchicon.png');
+    background-position: 10px 10px; 
+    background-repeat: no-repeat;
+    padding: 12px 20px 12px 40px;
+  }
