wip forget password

--- a/view/forget-password.html
+++ b/view/forget-password.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forget Password</title>
+    <link rel="stylesheet" href="css/input.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/auth.css">
 </head>
-<body>
-<form action="../controller/forgetpassword.controller.php" method="POST" style="display: inline-block;">  
-    <fieldset>
-        <legend>Password reset:</legend>
-
+<body >
+<form style = "padding: 10% 30%; height: 60vh;"  class = "inputDiv" action="../controller/forgetpassword.controller.php" method="POST" style="display: inline-block;">  
+    <!-- <fieldset> -->
+        
+        <h1 style ="text-align: center;">Forget Password</h1>
         <label for="email">Email:</label><br>
         <input type="text" id="email" name="email" >
        
@@ -30,7 +33,7 @@
                 </input>
                 
                 <br>
-      </fieldset> 
+      <!-- </fieldset>  -->
       <br>
       <input type="submit" value="Confirm">
     </form>     
