forget password done

--- a/view/forget-password.html
+++ b/view/forget-password.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/auth.css">
 </head>
 <body >
-<form style = "padding: 10% 30%; height: 60vh;"  class = "inputDiv" action="../controller/forgetpassword.controller.php" method="POST" style="display: inline-block;">  
+<div style = "padding: 10% 30%; height: 60vh;"  class = "inputDiv" action="../controller/forgetpassword.controller.php" style="display: inline-block;">  
     <!-- <fieldset> -->
         
         <h1 style ="text-align: center;">Forget Password</h1>
@@ -28,14 +28,66 @@
             <br>
             <br>
             <label for="password">Repeat New Password:</label><br>
-            <input type="password" id="password" name="repassword" >
+            <input type="password" id="repassword" name="repassword" >
         
                 </input>
                 
                 <br>
       <!-- </fieldset>  -->
       <br>
-      <input type="submit" value="Confirm">
-    </form>     
+      <!-- <input type="submit" value="Confirm"> -->
+        <button onclick="update()" type="submit" class="button" style="width: 100%;" name="submit">Confirm</button>
+    </div>   
+    
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script>
+        function update(){
+            let message = "";
+        var verified = true;
+        if($("#email").val() == ""){
+            message += "Email is required \n";
+            verified = false;
+        }
+        if($("#password").val() == ""){
+            message += "Password is required \n";
+            verified = false;
+        }
+        if($("#repassword").val() == ""){
+            message += "Repeat Password is required \n";
+            verified = false;
+        }
+        if($("#password").val() != $("#repassword").val()){
+            message += "Password and Repeat Password are not the same \n";
+            verified = false;
+        }
+        var data = {
+            email: $("#email").val(),
+            password: $("#password").val(),
+            repassword: $("#repassword").val(),
+        };
+  data  = JSON.stringify(data);
+
+ if (verified) {
+    $.post("../controller/forgetpassword.controller.php", data, function(response){
+    if(response == "success"){
+        alert("Password has been changed");
+        window.location.href = "../index.php";
+
+
+    }else{
+        alert(response);
+
+
+    }
+
+        });
+ }else{
+    alert(message);
+ }
+        }
+    </script>
+
+
 </body>
 </html>
